--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     body {
       padding: 0;
       margin: 0;
+      width: 100%;
+      height: 100vh;
       font-family: 'roboto';
     }
   </style>
